[tool.poetry]
name = "yanglab-guide"
version = "1.0.0"
description = "The repo contain content about yang's lab guide."
authors = ["Yangyang Li <li002252@umn.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ylab-hi/yanglab-guide"
repository = "https://github.com/ylab-hi/yanglab-guide"
documentation = "https://yanglab-guide.readthedocs.io"
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
Changelog = "https://github.com/ylab-hi/yanglab-guide/releases"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
xdoctest = { extras = ["colors"], version = "^1.0.0" }
sphinx = "^4.5.0"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.18.1"
flake8 = "^3.9.2"
black = "^22.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.5"
pep8-naming = "^0.12.0"
pre-commit-hooks = "^4.2.0"
myst_parser = "^0.17.2"
sphinx-book-theme = "^0.3.2"
sphinx-rtd-theme = "^0.5.2"
Pygments = "^2.12.0"


[build-system]
requires = ["pybind11>2.9.1", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
