[project]
name = "yanglab-guide"
version = "1.0"
description = "Yanglab Documentation Guide"
authors = [{ name = "Yangang Li", email = "yangang.li@northwestern.edu" }]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

dependencies = [
  "sphinx>=5.0.0",
  "myst-parser>=1.0.0",
  "sphinx-book-theme>=1.0.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.5.0",
  "sphinx-thebe>=0.3.1",
  "sphinx-togglebutton>=0.3.2",
  "sphinx-autobuild>=2021.3.14",
  "sphinxcontrib-bibtex>=2.6.3",
  "sphinxcontrib-youtube>=1.2.0",
  "sphinxext-opengraph>=0.8.2",
  "pydata-sphinx-theme>=0.13.1",
  "ablog>=0.10.33",
  "accessible-pygments>=0.0.4",
  "aiofiles>=24.1.0",
  "aiohttp>=3.10.10",
  "linkify-it-py>=2.0.3",
  "matplotlib>=3.7.3",
  "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = ["nox>=2022.1.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
package = false

[dependency-groups]
dev = ["nox>=2022.1.7"]
